--- a/index.html
+++ b/index.html
@@ -11,34 +11,44 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- bootstrap -->
 
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
-    <img src="./assets/img/logo-emergencias.jpeg" alt="logoemergencias" style="width: 40px;" align="right">
+    <header class="header">
+        <nav class="navbar">
+            <img src="./assets/img/logo-emergencias.jpeg" alt="logoemergencias" style="width: 50px;" align="right">
 
-    <header class="menu">
+            <label class="labe_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z" />
+                    <path
+                        d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8m0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-1-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0M4 8a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m0 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
+                </svg>
+            </label>
 
-        <nav>
-            <ul>
-                <li><a href="./pages/planesdesalud.html">Planes de salud</a></li>
-                <li><a href="./pages/atencionpersonalizada.html">Atencion personalizada</a></li>
-                <li><a href="./pages/consultas.html">Consultas</a></li>
-                <li><a href="./pages/empresas.html">Empresas</a></li>
-                <li><a href="./pages/blogsalud.html">Blog salud</a></li>
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+
+            <ul class="ul_links">
+                <li class="li_links"><a href="./pages/planesdesalud.html" class="link">Planes de salud</a></li>
+                <li class="li_links"><a href="./pages/atencionpersonalizada.html" class="link">Atencion personalizada</a></li>
+                <li class="li_links"><a href="./pages/consultas.html" class="link">Consultas</a></li>
+                <li class="li_links"><a href="./pages/empresas.html" class="link">Empresas</a></li>
+                <li class="li_links"><a href="./pages/blogsalud.html" class="link">Blog salud</a></li>
             </ul>
-        </nav>
 
+        </nav>
     </header>
 
     <main>
-        <h1 class="colorFondo textcenter">EMERGENCIAS SA</h1>
+        <h1 class="colorFondo textcenter">EMERGENCIAS SA</h1> 
 
         <section>
-
-
-
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut
                 deserunt
@@ -60,7 +70,9 @@
 
     </main>
     <footer>
-        <h2> Contactanos para conocernos desde nuestras redes:</h2>
+        <h2> 
+            
+            Contactanos para conocernos desde nuestras redes:</h2>
 
         <div class="footercontenedor">
             <a href="http://twitter.com" target="_blank">
@@ -74,8 +86,7 @@
 
         </div>
 
-            <h6>&#169;Copyright 2024 | Ambulancias SA</h6>
-        
+        <h6>&#169;Copyright 2024 | Ambulancias SA</h6>
 
         <div class="logo-container">
             <a href="https://web.whatsapp.com/" target="_blank">
