--- a/pages/planesdesalud.html
+++ b/pages/planesdesalud.html
@@ -12,24 +12,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/style.css">
-
+        <link rel="stylesheet" href="../css/style.css">
+        
 </head>
 
 <body>
-    <img src="../assets/img/logo-emergencias.jpeg" alt="logoemergencias" style="width: 40px;" align="right">
-    
-    <header class="menu">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./atencionpersonalizada.html">Atencion personalizada</a></li>
-                <li><a href="./consultas.html">Consultas</a></li>
-                <li><a href="./empresas.html">Empresas</a></li>
-                <li><a href="./blogsalud.html">Blog salud</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <nav class="navbar">
+            <img src="../assets/img/logo-emergencias.jpeg" alt="logoemergencias" style="width: 50px;" align="right">
 
+            <label class="labe_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z" />
+                    <path
+                        d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8m0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-1-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0M4 8a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m0 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
+                </svg>
+            </label>
+
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+
+            <ul class="ul_links">
+                <li class="li_links"><a href="../index.html" class="link">Inicio</li>
+                <li class="li_links"><a href="../pages/atencionpersonalizada.html" class="link">Atencion personalizada</a></li>
+                <li class="li_links"><a href="../pages/consultas.html" class="link">Consultas</a></li>
+                <li class="li_links"><a href="../pages/empresas.html" class="link">Empresas</a></li>
+                <li class="li_links"><a href="../pages/blogsalud.html" class="link">Blog salud</a></li>
+            </ul>
+
+        </nav>
     </header>
 
     <section>
