--- a/pages/atencionpersonalizada.html
+++ b/pages/atencionpersonalizada.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergencias SA | Atencion Personalizada</title>
+    <title>ER | Emergencias y Urgencias Médicas| Atencion Personalizada</title>
 
     <link rel="shortcut icon" href="../assets/img/42545ambulance_99008.ico" type="image/x-icon">
 
@@ -48,56 +48,49 @@
 
     <section>
 
-        <h2 class="colorfondo2 textcenter"> Cartilla Medica</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <h3 class="colorfondo2 textcenter"> Cartilla Medica</h3>
+        <p>Nuestra cartilla médica de prestadores vittal, cuenta con médicos especialistas, institutos, centros de
+            diagnóstico y de odontología, farmacias, ortopedias y ópticas adheridas.</p>
 
         <h3 class="colorfondo2 textcenter"> Cobertura</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>ER | Emergencias y Urgencias Médicas - MAPA</p>
 
-        <h4 class="colorfondo2 textcenter"> Preguntas Frecuentes</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <h3 class="colorfondo2 textcenter"> Preguntas Frecuentes</h3>
+        <p>*Todos los socios de Emergencias y Urgencias Médicas tienen en forma gratuita el servicio de urgencia
+            odontológica. Si deseás una
+            cobertura más completa, podés agregar como adicional el Plan Odontológico, que cubre la visita al
+            consultorio odontológico, extracciones, caries y arreglos.
 
-        <h5 class="colorfondo2 textcenter"> Telefonos Utiles</h5>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas,
-            ullam, quia dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid
-            laboriosam.</p>
+            Para más información y costos del mismo podés comunicarte con el Centro de Atención al Socio al
+            0810-888-88888.</p>
+        <p>*Las modalidades de pago que aceptamos son débito automático de una caja de ahorro/cta. cte. o tarjeta de
+            crédito. En algunas zonas contamos con cobranza a domicilio.</p>
+        <p>*Llamando al Centro de Atención al Socio al 0810-888-88888 en donde te informarán los planes a tu
+            disposición.
+        </p>
+        <p>*Debés tener tu carnet de socio a mano y llamar al número que figura en el mismo. Si te encontrás en otra
+            ciudad, debés consultar en el Centro de Atención al Socio.
 
-        <h6 class="colorfondo2 textcenter"> Central de Turnos</h6>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas,
-            ullam, quia dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid
-            laboriosam.</p>
+            Recordá que te solicitarán el número de socio a la hora de atender tu urgencia.</p>
 
+        <h3 class="colorfondo2 textcenter"> Telefonos Utiles</h3>
+        <div class="telefonosutiles">
+            <p>*Agendá nuestros canales de contacto
+            <p>
+
+            <p>-Urgencias: (11) 4000-8888 | 0810-333-8888
+            <p>
+            <p>-Centro de Atención al Socio: 0810-888-48825
+            <p>
+            <p>-Centro de Turnos: 0810-888-48825
+            <p>
+            <p>-Informes y ventas: 0810-222-8488
+            <p>
+            <p>-Conmutador: (11) 4556-2000
+            <p>
+            <p>-Whatsapp: +54 9 11 3032-4611
+            <p>
+        </div>
     </section>
 </body>
 
@@ -111,9 +104,9 @@
 
 </footer>
 
-    <!-- script bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        
+<!-- script bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
 </html>
