--- a/pages/blogsalud.html
+++ b/pages/blogsalud.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergencias SA | Blog Salud</title>
+    <title>ER | Emergencias y Urgencias Médicas| Blog Salud</title>
 
     <link rel="shortcut icon" href="../assets/img/42545ambulance_99008.ico" type="image/x-icon">
 
@@ -49,88 +49,69 @@
 
         <h1 class="colorFondo textcenter">Blog Salud</h1>
 
-        <div class="grid">
-            <div class="slider">
-                <div class="imagen-list">
-                    <img src="../assets/img/Imagen1.jpeg" alt="imagen-item">
-                    <img src="../assets/img/Imagen2.jpg" alt="imagen-item">
-                    <img src="../assets/img/Imagen3.png" alt="imagen-item">
-                    <img src="../assets/img/Imagen4.jpg" alt="imagen-item">
-                    <img src="../assets/img/Imagen5.jpg" alt="imagen-item">
-                    <img src="../assets/img/Imagen6.jpg" alt="imagen-item">
-                </div>
-            </div>
-            <div class="slider-scrollbar">
-                <div class="scrollbar-track">
-                    <div class="scrollbar-thumb">
-                </div>
+        <div class="carousel">
+            <div class="slides">
+                <div class="slide"><img src="../assets/img/Imagen1.jpeg" alt="imagen-item"></div>
+                <div class="slide"><img src="../assets/img/Imagen2.jpg" alt="imagen-item"></div>
+                <div class="slide"><img src="../assets/img/Imagen4.jpg" alt="imagen-item"></div>
+                <div class="slide"><img src="../assets/img/Imagen6.jpg" alt="imagen-item"></div>
             </div>
         </div>
 
         <h2 class="colorfondo2 textcenter"> Actualidad de Salud a tu alcance</h2>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem asperiores vitae? Possimus voluptas
-            non corrupti provident asperiores. Sed earum obcaecati minima ab non aliquid hic fugiat temporibus accusamus
-            quia?
-            Maiores recusandae animi molestiae dolore, delectus, ab pariatur commodi expedita incidunt repellendus
-            ratione placeat non aliquid? Numquam debitis fugiat expedita sint dolorum at odit officiis qui quidem neque,
-            laboriosam mollitia?
-            Minima, doloribus. Commodi dolorem voluptates sunt est molestiae tempora quod ullam saepe facilis mollitia
-            cumque, odit aperiam tempore dolores omnis quos, nobis dolorum ducimus nulla? Quia dolorem amet quo impedit?
-            Iusto veniam molestias magnam aspernatur debitis recusandae totam autem sint! Ipsum quas repellendus
-            repellat excepturi expedita. Deserunt voluptatum molestias cupiditate eius iste, eveniet quasi, fugiat
-            voluptatem id ducimus, veniam ipsa?
-            Consequuntur ea consectetur reiciendis dolorum quae officia corrupti incidunt repellendus pariatur
-            repudiandae similique maxime assumenda repellat, eos nihil rerum atque. Nesciunt consequuntur quas
-            distinctio fugit optio reprehenderit doloremque debitis iusto.
-            Modi deserunt quis temporibus quaerat dolorem nobis, incidunt nisi? Asperiores, ex odit, nam delectus beatae
-            optio praesentium sequi suscipit magnam itaque sed qui dolorem error rem totam. Facilis, ducimus rem.
-            Deleniti, laboriosam sunt natus animi libero autem quae nihil ex consequatur eligendi omnis fugit quis!
-            Doloremque, et, vitae tenetur commodi dolorum modi molestias tempore maiores at provident cumque saepe!
-            Facilis.
-            Hic reprehenderit nam dicta quam totam, vero rerum corrupti odit autem quo tempora quas atque doloremque ab
-            necessitatibus dolorum. Minima, consequuntur quae. Excepturi laudantium illum facilis qui laboriosam iste
-            delectus!
-            Rem ex iure ullam blanditiis enim inventore voluptatem laborum dolores temporibus iusto libero corrupti a
-            illo consectetur accusantium, repudiandae debitis amet nihil nam tempore nobis quis. Ex quidem aspernatur
-            totam?
-            Autem quos unde ad, commodi, repellat, et sunt sed iusto explicabo iure ex at voluptatum magnam distinctio
-            delectus? Assumenda omnis facilis qui molestias quibusdam, voluptate distinctio culpa repellat unde
-            inventore!
-            Quam temporibus voluptatum voluptatibus praesentium quis! Nam modi hic eum, obcaecati quas aperiam vero
-            similique cumque dolor rerum perspiciatis commodi deserunt corrupti dolores sequi doloremque enim molestias
-            dignissimos temporibus. Consequatur!
-            Libero repudiandae iure neque dignissimos cum quisquam assumenda eius ad. Quod totam deleniti minima saepe
-            minus voluptates sapiente repudiandae, consequatur tempora, explicabo consectetur tenetur voluptatibus
-            veniam aliquid autem maiores sit?
-            Optio pariatur, eos eum ipsa impedit totam debitis magnam modi veniam, accusamus asperiores consectetur
-            inventore! Earum quae tenetur aliquid odit facilis voluptas nulla distinctio, sint excepturi cumque amet a
-            nesciunt.
-            Id omnis facilis nulla, voluptates nihil vero doloremque aut. Tenetur ea ducimus modi, veniam eligendi,
-            porro hic molestiae vitae assumenda omnis expedita voluptatum nostrum mollitia ab temporibus enim ratione
-            incidunt.
-            Voluptatem beatae libero, voluptas dolores debitis expedita quos sint, sequi ipsa dolore non alias aut
-            laborum natus. Laborum, facere, totam facilis tenetur maiores labore, corporis dolorem consequuntur et
-            placeat ullam?
-            Maxime error ad eligendi! Voluptas, fuga earum! Dolor modi qui, voluptas possimus adipisci labore, at
-            deserunt odio fuga quam veniam nisi ullam facere in animi optio rerum ex alias eligendi?
-            Possimus impedit quam ab sunt iste rerum voluptas itaque error unde! Tempore accusamus quae, pariatur
-            voluptas neque quas quisquam. Exercitationem, tempore reprehenderit illum totam optio dicta sapiente fugiat
-            consequuntur quibusdam!
-            Alias, aliquam! Deserunt qui quod, aliquam accusamus tenetur dicta doloribus repellendus totam iure sint
-            eligendi, quasi sit vitae? Neque, voluptatibus! Deleniti esse a ut temporibus reprehenderit non vero
-            repellendus ex.
-            Rerum quis excepturi ex quam. Architecto sequi laudantium beatae consequuntur nihil incidunt repellat totam.
-            Qui voluptate blanditiis tempore sunt cupiditate quis quas soluta? Officia distinctio exercitationem,
-            placeat repellat nisi sequi!
-            Accusamus, temporibus officia et ducimus architecto error iusto nihil in perferendis ratione est, officiis a
-            earum vitae ut dicta quos facilis consectetur asperiores, at blanditiis minus. Repellat error cum fugit!
+        <p class="blogsaludtitulo"> Cómo influye la llegada de los días más fríos en el estado de ánimo</p>
+
+
+        <p class="blogsaludfecha"> Miercoles, 12 de junio de 2024
+        <p>
+
+        <p class="blogsaludinfo">
+        Tras el mayo más frío de la historia y a pocos días del comienzo del invierno, resulta importante conocer
+        los efectos de la falta de la luz solar en el estado de ánimo y saber que la poca luz del sol es el
+        principal factor que determina la aparición de trastornos del estado de ánimo, como la depresión estacional,
+        una depresión específica relacionadas a los cambios de estación.
+
+        Esto sucede porque la exposición al sol es el factor fundamental de producción y metabolización de la
+        vitamina D la cual a su vez es imprescindible para la producción de serotonina, motor que regula los estados
+        de ánimo junto a otros neurotransmisores.
+
+        La vitamina D regula una enzima que convierte el triptófano en serotonina. Este es un punto importante, ya
+        que estudios científicos han demostrado que la carencia de vitamina D puede aumentar en un 75% el riesgo de
+        padecer depresión.
+
+        Por otro lado, la llegada del frío también puede modificar la disminución de la actividad física y provocar
+        el aumento de la sensación de desgano o depresión. Entonces, la inactividad producida por los factores
+        climáticos puede resultar en un proceso de retroalimentación que contribuye a perpetuar la percepción de
+        tener poca energía.
+
+        Para minimizar todos estos efectos del clima en el estado de ánimo se recomienda mantener una rutina de
+        actividad física, realizar ejercicio en forma regular y alimentarse de manera equilibrada.
+
+        También intentar que los ambientes del hogar sean más luminosos, abrir las ventanas, exponerse al sol de 15
+        a 20 minutos por día y visitar plazas o parques.
+
+        Además, es importante mantener el contacto social y familiar o afectivo y, si de ser necesario, buscar ayuda
+        profesional especializada.
         </p>
 
     </section>
 </body>
 
 <footer>
+
+    <div class="footercontenedor">
+        <a href="http://twitter.com" target="_blank">
+            <img src="../assets/img/logotwitter.svg" alt="twitter" class="imagen">
+        </a>
+        <a href="http://instagram.com" target="_blank">
+            <img src="../assets/img/logoinstagram.svg" alt="instagram" class="imagen">
+
+            <a href="http://linkedin.com" target="_blank">
+                <img src="../assets/img/logolinkedin.svg" alt="linkedin" class="imagen">
+
+    </div>
+
     <h6>&#169;Copyright 2024 | Ambulancias SA</h6>
 
     <div class="logo-container">
