--- a/pages/empresas.html
+++ b/pages/empresas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergencias SA | Empresas</title>
+    <title>ER | Emergencias y Urgencias Médicas| Empresas</title>
 
     <link rel="shortcut icon" href="../assets/img/42545ambulance_99008.ico" type="image/x-icon">
 
