--- a/pages/planesdesalud.html
+++ b/pages/planesdesalud.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergencias SA | Planes de Salud</title>
+    <title>ER | Emergencias y Urgencias Médicas| Planes de Salud</title>
 
     <link rel="shortcut icon" href="../assets/img/42545ambulance_99008.ico" type="image/x-icon">
 
@@ -12,8 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="../css/style.css">
-        
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
@@ -35,7 +35,8 @@
 
             <ul class="ul_links">
                 <li class="li_links"><a href="../index.html" class="link">Inicio</li>
-                <li class="li_links"><a href="../pages/atencionpersonalizada.html" class="link">Atencion personalizada</a></li>
+                <li class="li_links"><a href="../pages/atencionpersonalizada.html" class="link">Atencion
+                        personalizada</a></li>
                 <li class="li_links"><a href="../pages/consultas.html" class="link">Consultas</a></li>
                 <li class="li_links"><a href="../pages/empresas.html" class="link">Empresas</a></li>
                 <li class="li_links"><a href="../pages/blogsalud.html" class="link">Blog salud</a></li>
@@ -48,57 +49,46 @@
 
         <h1 class="colorFondo textcenter">Planes de Salud</h1>
 
-        <img src="../assets/img/Planes Obras Sociales.png" alt="logo-planesdesalud" style="width: 700px;" align="right">
+        <img src="../assets/img/Planes Obras Sociales.jpg" alt="logo-planesdesalud">
 
         <h2 class="colorfondo2 textcenter"> Plan One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>Disponemos de personal médico calificado y la flota más completa de móviles de alta complejidad con el mejor
+            equipamiento para el tratamiento de urgencias y emergencias médicas, cubriendo tanto situaciones de gravedad
+            en donde se necesita una atención médica inmediata porque existe riesgo de vida inminente, como en
+            situaciones donde se requiere una atención inicial rápida con la presencia de un médico a domicilio.</p>
 
         <h2 class="colorfondo2 textcenter"> Plan Mix</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>Cobertura ante emergencias y urgencias médicas, y médicos clínicos y pediatras a domicilio (*) en un solo
+            plan, para todo el grupo familiar.
+
+            Los socios vittal Mix cuentan también con vittal infantil. El plan de salud ideal para los más chicos que
+            incluye pediatras a domicilio y traslados pediátricos y neonatológicos. Además, acceden sin cargo extra al
+            servicio de hisopado a domicilio y consultas médicas online las 24 hs desde cualquier lugar con vittal iDoc.
+        </p>
 
         <h2 class="colorfondo2 textcenter"> Plan Plus</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>Todos los servicios de salud 100% incluidos en una cuota mensual única.
+            Sin cargos extra.
+
+            El socio vittal Plus cuenta con cobertura en servicios de emergencias y urgencias, visitas médicas sin tope
+            ni cargos extra, vittal infantil para los más chiquitos de la familia, consultas médicas online desde
+            cualquier lugar, descuentos del 40% en farmacias, asistencia internacional al viajero y toda la experiencia
+            y atención profesional de la empresa de emergencias médicas con mayor cobertura y trayectoria del país.</p>
 
         <h2 class="colorfondo2 textcenter"> Plan Hogar</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>Cobertura ante cualquier emergencia o urgencia médica las 24 hs. del día para todos aquellos que se
+            encuentren en tu casa. No sólo a tu familia, sino también a cada una de las personas que se encuentren de
+            visita o trabajando.
+
+            Contratá el Plan Hogar Protegido y sentí la tranquilidad de proteger a todos.</p>
 
         <h2 class="colorfondo2 textcenter"> Plan Infantil</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut deserunt
-            sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia. Nemo,
-            fugit.
-            Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure excepturi,
-            libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione! Voluptatum,
-            laboriosam.
-            Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-            dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.</p>
+        <p>Servicio diferencial para los chicos que incluye equipo de pediatras a domicilio junto con los siguientes
+            beneficios:
+            .Hisopado a domicilio.
+            .Pediatras a domicilio.
+            .Consultas médicas online las 24 hs.
+            .Traslados pediátricos y neonatológicos (servicio con copago).</p>
 
     </section>
 
@@ -114,9 +104,9 @@
 
 </footer>
 
-    <!-- script bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        
+<!-- script bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
 </html>
