--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio | Emergencias SA</title>
+    <title>ER | Emergencias y Urgencias Médicas </title>
 
     <link rel="shortcut icon" href="./assets/img/42545ambulance_99008.ico" type="image/x-icon">
+    
+    <link rel="stylesheet" href="./scss/estilos.scss">
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,7 +38,8 @@
 
             <ul class="ul_links">
                 <li class="li_links"><a href="./pages/planesdesalud.html" class="link">Planes de salud</a></li>
-                <li class="li_links"><a href="./pages/atencionpersonalizada.html" class="link">Atencion personalizada</a></li>
+                <li class="li_links"><a href="./pages/atencionpersonalizada.html" class="link">Atencion
+                        personalizada</a></li>
                 <li class="li_links"><a href="./pages/consultas.html" class="link">Consultas</a></li>
                 <li class="li_links"><a href="./pages/empresas.html" class="link">Empresas</a></li>
                 <li class="li_links"><a href="./pages/blogsalud.html" class="link">Blog salud</a></li>
@@ -46,51 +49,45 @@
     </header>
 
     <main>
-        <h1 class="colorFondo textcenter">EMERGENCIAS SA</h1> 
+        <h1 class="colorFondo textcenter"> URGENCIAS (011) 4000-4000 | 0800-333-3333 </h1>
 
-        <section>
+        <img class="image-banner" src="./assets/img/Planes Obras Sociales.jpg" alt="banneremergencias">
+
+        <section class="block" style="background-image: url(./assets/img/modern-blue-low-poly-triangle-shapes-banner-background-free-vector.jpg);">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quos officiis atque non, sit aut
-                deserunt
-                sequi tenetur saepe consequatur beatae nisi, praesentium recusandae iste voluptate labore mollitia.
-                Nemo,
-                fugit.
-                Laborum magnam, minus numquam illo repellat porro officiis magni quod voluptates quos vero iure
-                excepturi,
-                libero maiores reprehenderit molestiae suscipit, nihil sed ex aut nam corrupti dicta ratione!
-                Voluptatum,
-                laboriosam.
-                Eveniet commodi quos minus, tenetur porro sit sint alias sunt nihil! Fugiat error voluptas, ullam, quia
-                dolores corporis hic atque possimus magni iusto quae perspiciatis ducimus ipsa earum aliquid laboriosam.
+                Nuestro conocimiento y experiencia en el sector nos permite brindar una cobertura a la medida de cada
+                organización:
             </p>
+            <p>• Urgencias y emergencias médicas.</p>
+            <p>• Médicos a domicilio.</p>
+            <p>• Traslado de pacientes en ambulancias con o sin médico.</p>
+            <p>• Traslados pediátricos y neonatales en unidades equipadas con la más alta tecnología.</p>
+            <p>• Traslados aeromédicos de alta complejidad.</p>
 
-            <img class="image-banner" src="./assets/img/banner-emergencias.jpeg" alt="banneremergencias">
         </section>
 
 
     </main>
     <footer>
-        <h2> 
-            
-            Contactanos para conocernos desde nuestras redes:</h2>
+        <h1 class="colorFondo textcenter"> Contactanos para conocernos desde nuestras redes: </h1>
 
         <div class="footercontenedor">
             <a href="http://twitter.com" target="_blank">
-                <img src="./assets/img/logotwitter.png" alt="twitter" class="imagen">
+                <img src="./assets/img/logotwitter.svg" alt="twitter" class="imagen">
             </a>
             <a href="http://instagram.com" target="_blank">
-                <img src="./assets/img/logoinstagram.png" alt="instagram" class="imagen">
+                <img src="./assets/img/logoinstagram.svg" alt="instagram" class="imagen">
 
                 <a href="http://linkedin.com" target="_blank">
-                    <img src="./assets/img/logolinkedin.png" alt="linkedin" class="imagen">
+                    <img src="./assets/img/logolinkedin.svg" alt="linkedin" class="imagen">
 
         </div>
 
-        <h6>&#169;Copyright 2024 | Ambulancias SA</h6>
+        <h6>&#169;Copyright 2024 | ER | Emergencias y Urgencias Médicas </h6>
 
         <div class="logo-container">
             <a href="https://web.whatsapp.com/" target="_blank">
-                <img src="./assets/img/logo whatsapp.png" alt="Logo" class="floating-logo">
+                <img src="./assets/img/icon-whatsapp.svg" alt="Logo" class="floating-logo">
         </div>
 
     </footer>
